@@ -16,4 +16,5 @@
 19-Oct-2019 V0.24 Handle miscellaneous issues in reference sequence processing from Oct 18 full load
 20-Oct-2019 V0.25 Handle duplicates from inconsistent struct_ref_* records
  5-Dec-2019 V0.26 Add support for entity typed schema and update dependencies.
+ 6-Dec-2019 V0.27 Add match index cache recovery.
 
